--- a/assets/css/application-minimal.css
+++ b/assets/css/application-minimal.css
@@ -14,8 +14,10 @@
   font-size: 13px;
 }
 .app-navbar .navbar-brand {
-  font-size: 13px;
+  font-size: 20px;
   letter-spacing: .15em;
+  font-family: Cinzel;
+  font-weight: 700;
 }
 
 
